<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="rrozanski.wisiszmihajs.DebtViewModel" />

        <variable
            name="presenter"
            type="rrozanski.wisiszmihajs.DebtPresenter" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="3dp"
            card_view:contentPadding="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="@{viewModel.collapsed ? View.GONE : View.VISIBLE}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/who" />

                        <EditText
                            android:id="@+id/debtor_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:longClickable="false"
                            android:maxLines="1"
                            android:text="@={viewModel.name}"
                            app:editable_edit_text="@{viewModel.editMode}"
                            tools:text="Imię Nazwisko" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@{viewModel.number}"
                            tools:text="+48500600700" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/contact_book"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="@{viewModel.editMode ? View.VISIBLE : View.GONE}">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_account_box_black_36dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/contact" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/collapse_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="@{viewModel.editMode ? View.GONE : View.VISIBLE}"
                        tools:layout_weight="0"
                        tools:visibility="gone">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_expand_less_black_36dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="Zwiń" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.debt}"
                    app:editable_edit_text="@{viewModel.editMode}"
                    tools:text="50zł i 3 specjale" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notes" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@={viewModel.notes}"
                    app:editable_edit_text="@{viewModel.editMode}"
                    tools:text="ma oddać przed sylwestrem" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start"
                        android:text="@{viewModel.date}"
                        tools:text="tutaj data dodania" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:visibility="@{viewModel.editMode ? View.VISIBLE : View.GONE}">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="4dp"
                                android:text="@string/save" />

                            <ImageView
                                android:id="@+id/save_icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:adjustViewBounds="true"
                                android:src="@drawable/ic_save_black_36dp" />

                        </LinearLayout>


                        <ImageView
                            android:id="@+id/sms_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_chat_black_36dp"
                            android:visibility="@{viewModel.editMode ? View.GONE : View.VISIBLE}" />

                        <ImageView
                            android:id="@+id/settings_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:adjustViewBounds="true"
                            android:longClickable="true"
                            android:src="@drawable/ic_build_black_36dp"
                            android:visibility="@{viewModel.editMode ? View.GONE : View.VISIBLE}" />

                        <ImageView
                            android:id="@+id/delete_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_delete_forever_black_36dp"
                            android:visibility="@{viewModel.editMode ? View.GONE : View.VISIBLE}" />

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="@{viewModel.collapsed ? View.VISIBLE : View.GONE}"
                android:weightSum="5">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:maxLines="1"
                            android:text="@{viewModel.name}"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:maxLines="1"
                            android:text="@{viewModel.debt}" />

                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/collapsed_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_expand_more_black_36dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="Rozwiń" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</layout>